<resources>
    <string name="app_name" translatable="false">Fitness Tracker</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="contact_no">Contact No</string>
    <string name="send_otp">Send OTP</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="google">Google</string>
    <string name="mobile_no">Mobile NO</string>
    <string name="verify">Verify</string>
    <string name="didn_t_receive_code_resend_otp">Didn\'t Receive Code? Resend OTP</string>
    <string name="otp">OTP</string>
    <string name="enter_the_otp">\"Enter The Otp Sent On \"</string>
    <string name="calorie_tracker">Calorie Tracker</string>
    <string name="workout_tracker">Workout Tracker</string>
    <string name="profile">My Profile</string>
    <string name="statistics">Statistics</string>
    <string name="workout_detector">Workout Detector</string>
    <string name="logout">logout</string>
    <string name="calories_eaten">Calories Eaten</string>
    <string name="fats_eaten">Fats Gained</string>
    <string name="add_food">Add Food</string>
    <string name="protein_intake">Protein Intake</string>
    <string name="carbohydrate_consumed">Carbohydrate Consumed</string>
    <string name="food_name">Food Name</string>
    <string name="find_info">Find Info</string>
    <string name="total_calorie">Total Calorie</string>
    <string name="total_fats">Total Fats</string>
    <string name="total_protein">Total Protein</string>
    <string name="total_carbs">Total Carbs</string>
    <string name="dash">---</string>
    <string name="welcome_to_fitness_tracker">Welcome To Fitness Tracker</string>
    <string name="next">Next</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="tell_us_about_yourself">Tell Us About Yourself</string>
    <string name="gender_info">To give you a better experience and results \nwe would like to know your gender</string>
    <string name="Continue">Continue</string>
    <string name="how_old_are_you">How Old Are You?</string>
    <string name="age_in_years_this_will_help_us_to_personalize_n_an_exercise_program_plan_that_suits_you">Age in years, This will help us to personalize \nan exercise program plan that suits you</string>
    <string name="what_is_your_weight">What is Your Weight?</string>
    <string name="weight_in_kg_don_t_worry_you_can_always_change_it_later">Weight in kg, Don\'t Worry You Can Always Change It Later</string>
    <string name="height_in_cm_don_t_worry_you_can_always_change_it_later">Height in cm, Don\'t Worry You Can Always Change It Later</string>
    <string name="back">Back</string>
    <string name="what_is_your_height">What is your Height?</string>
    <string name="create_your_account">Create Your \n Account</string>
    <string name="or_continue_with">----------------  Or continue with  ----------------</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="new_create_an_account">New? Create an account</string>
    <string name="manually_add">Manually Add</string>
    <string name="record_your_n_calorie">Record your \ncalorie</string>
    <string name="calorie_kcal">%1$s KCAL</string>
    <string name="fat_grams">%1$s g</string>
    <string name="protein_grams">%1$s g</string>
    <string name="carbs_grams">%1$s g</string>
    <string name="caloriesZ_burn">%1$d calories/hour</string>
    <string name="record">Record</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="java_entry_title">Pose Estimation</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="toggle_turn_on">Front</string>
    <string name="toggle_turn_off">Back</string>
    <string name="desc_camera_source_activity">Vision detectors demo with live camera preview</string>
    <string name="desc_still_image_activity">Vision detectors demo with a still image</string>
    <string name="desc_camerax_live_preview_activity">Vision detectors demo with live preview using CameraX. Note that CameraX is only supported on API 21+</string>
    <string name="download_error">Download error</string>
    <string name="start_over">Start over</string>
    <string name="menu_item_settings">Settings</string>
    <string name="select_image">Select image</string>
    <string name="pref_screen_title_live_preview">Live preview settings</string>
    <string name="pref_screen_title_still_image">Still image settings</string>
    <string name="pref_screen_title_camerax_live_preview">CameraX live preview settings</string>
    <string name="pref_category_face_detection">Face Detection</string>
    <string name="pref_category_object_detection">Object Detection / Custom Object Detection</string>
    <string name="pref_category_automl">AutoML Image Labeling</string>
    <string name="pref_category_pose_detection">Pose Detection</string>
    <string name="pref_category_key_camera" translatable="false">pckc</string>
    <string name="pref_category_title_camera">Camera</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_key_front_camera_preview_size" translatable="false">fcpvs</string>
    <string name="pref_key_front_camera_picture_size" translatable="false">fcpts</string>
    <string name="pref_key_camerax_target_resolution" translatable="false">ctas</string>
    <string name="pref_key_camera_live_viewport" translatable="false">clv</string>
    <string name="pref_title_rear_camera_preview_size">Rear camera preview size</string>
    <string name="pref_title_front_camera_preview_size">Front camera preview size</string>
    <string name="pref_title_camerax_target_resolution">CameraX target resolution</string>
    <string name="pref_title_camera_live_viewport">Enable live viewport</string>
    <string name="pref_summary_camera_live_viewport">Do not block camera preview drawing on detection</string>
    <string name="pref_title_object_detector_enable_multiple_objects">Enable multiple objects</string>
    <string name="pref_key_live_preview_object_detector_enable_multiple_objects" translatable="false">lpodemo</string>
    <string name="pref_key_still_image_object_detector_enable_multiple_objects" translatable="false">siodemo</string>
    <string name="pref_title_object_detector_enable_classification">Enable classification</string>
    <string name="pref_key_live_preview_object_detector_enable_classification" translatable="false">lpodec</string>
    <string name="pref_key_still_image_object_detector_enable_classification" translatable="false">siodec</string>
    <string name="pref_title_face_detector_landmark_mode">Landmark mode</string>
    <string name="pref_key_live_preview_face_detection_landmark_mode" translatable="false">lpfdlm</string>
    <string name="pref_entries_face_detector_landmark_mode_no_landmarks">No landmarks</string>
    <string name="pref_entries_face_detector_landmark_mode_all_landmarks">All landmarks</string>
    <string name="pref_entry_values_face_detector_landmark_mode_no_landmarks" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_landmark_mode_all_landmarks" translatable="false">2</string>
    <string name="pref_title_face_detector_contour_mode">Contour mode</string>
    <string name="pref_key_live_preview_face_detection_contour_mode" translatable="false">lpfdcm</string>
    <string name="pref_entries_face_detector_contour_mode_no_contours">No contours</string>
    <string name="pref_entries_face_detector_contour_mode_all_contours">All contours</string>
    <string name="pref_entry_values_face_detector_contour_mode_no_contours" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_contour_mode_all_contours" translatable="false">2</string>
    <string name="pref_title_face_detector_classification_mode">Classification mode</string>
    <string name="pref_key_live_preview_face_detection_classification_mode" translatable="false">lpfdcfm</string>
    <string name="pref_entries_face_detector_classification_mode_no_classifications">No classifications</string>
    <string name="pref_entries_face_detector_classification_mode_all_classifications">All classifications</string>
    <string name="pref_entry_values_face_detector_classification_mode_no_classifications" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_classification_mode_all_classifications" translatable="false">2</string>
    <string name="pref_title_face_detector_performance_mode">Performance mode</string>
    <string name="pref_key_live_preview_face_detection_performance_mode" translatable="false">lpfdpm</string>
    <string name="pref_entries_face_detector_performance_mode_fast">Fast</string>
    <string name="pref_entries_face_detector_performance_mode_accurate">Accurate</string>
    <string name="pref_entry_values_face_detector_performance_mode_fast" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_performance_mode_accurate" translatable="false">2</string>
    <string name="pref_title_face_detector_face_tracking">Face tracking</string>
    <string name="pref_key_live_preview_face_detection_face_tracking" translatable="false">lpfdft</string>
    <string name="pref_title_face_detector_min_face_size">Minimum face size</string>
    <string name="pref_key_live_preview_face_detection_min_face_size" translatable="false">lpfdmfs</string>
    <string name="pref_dialog_message_face_detector_min_face_size">Proportion of the head width to the image width, and the valid value range is [0.0, 1.0]</string>
    <string name="pref_toast_invalid_min_face_size">Minimum face size must be a float value and in the range [0.0, 1.0]</string>
    <string name="pref_title_pose_detector_performance_mode">Performance mode</string>
    <string name="pref_key_live_preview_pose_detection_performance_mode" translatable="false">lppdpm</string>
    <string name="pref_key_still_image_pose_detection_performance_mode" translatable="false">sipdpm</string>
    <string name="pref_entries_pose_detector_performance_mode_fast">Fast</string>
    <string name="pref_entries_pose_detector_performance_mode_accurate">Accurate</string>
    <string name="pref_entry_values_pose_detector_performance_mode_fast" translatable="false">1</string>
    <string name="pref_entry_values_pose_detector_performance_mode_accurate" translatable="false">2</string>
    <string name="pref_title_pose_detector_show_in_frame_likelihood">Show In-Frame Likelihood </string>
    <string name="pref_key_live_preview_pose_detector_show_in_frame_likelihood" translatable="false">lppdsifl</string>
    <string name="pref_key_still_image_pose_detector_show_in_frame_likelihood" translatable="false">sipdsifl</string>
    <string name="learn_exercises">Learn Exercises</string>
    <string name="we_are_always_there_nto_teach_you_new_exercises">We Are Always there\nTo Teach You New Exercises</string>
    <string name="exercise_name_optional">Exercise Name (Optional)</string>
    <string name="find_exercises">Find Exercises</string>
    <string name="difficulty_easy">Difficulty: Easy</string>
    <string name="equipments_none">Equipments: None</string>
    <string name="more_info">More Info</string>
    <string name="less_info">LESS INFO</string>
</resources>