<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ManualFoodAddActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="70dp"
        android:fontFamily="@font/advent_pro_semibold"
        android:text="@string/record_your_n_calorie"
        android:textAlignment="textStart"
        android:textColor="@color/text_color"
        android:textSize="42sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/foodName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="@string/username"
            android:background="@drawable/edittext"
            android:ems="10"
            android:fontFamily="@font/advent_pro_semibold"
            android:hint="@string/food_name"
            android:inputType="text"
            android:minHeight="52dp"
            android:padding="9dp"
            android:textColor="@color/black"
            android:textColorHint="#808080 "
            android:textSize="18sp" />

        <EditText
            android:id="@+id/calorie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext"
            android:ems="10"
            android:fontFamily="@font/advent_pro_semibold"
            android:hint="@string/total_calorie"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:minHeight="52dp"
            android:padding="9dp"
            android:textColor="@color/text_color"
            android:textColorHint="#808080 "
            android:textSize="18sp" />

        <EditText
            android:id="@+id/fat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext"
            android:ems="10"
            android:fontFamily="@font/advent_pro_semibold"
            android:hint="@string/total_fats"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:minHeight="52dp"
            android:padding="9dp"
            android:textColor="@color/text_color"
            android:textColorHint="#808080 "
            android:textSize="18sp" />

        <EditText
            android:id="@+id/protein"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext"
            android:ems="10"
            android:fontFamily="@font/advent_pro_semibold"
            android:hint="@string/total_protein"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:minHeight="52dp"
            android:padding="9dp"
            android:textColor="@color/text_color"
            android:textColorHint="#808080 "
            android:textSize="18sp" />

        <EditText
            android:id="@+id/fats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext"
            android:ems="10"
            android:fontFamily="@font/advent_pro_semibold"
            android:hint="@string/total_carbs"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:minHeight="52dp"
            android:padding="9dp"
            android:textColor="@color/text_color"
            android:textColorHint="#808080 "
            android:textSize="18sp" />


        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/roundbuttons"
            android:padding="14dp"
            android:text="@string/add_food"
            app:cornerRadius="6dp" />

    </LinearLayout>

</LinearLayout>