<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/advent_pro_semibold"
        android:text="@string/login_to_your_account"
        android:textAlignment="textStart"
        android:textColor="@color/text_color"
        android:textSize="36sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext"
            app:ccpDialog_textColor="@color/text_color"
            app:ccp_contentColor="@color/text_color"
            app:ccp_showFullName="true"
            app:ccp_showNameCode="false"
            app:ccp_showPhoneCode="false" />

        <EditText
            android:id="@+id/contact_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="@string/email"
            android:background="@drawable/edittext"
            android:ems="10"
            android:hint="@string/contact_no"
            android:inputType="phone"
            android:minHeight="48dp"
            android:padding="9dp"
            android:textColor="@color/text_color"
            android:textColorHint="#808080 " />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/username"
            android:background="@drawable/edittext"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="9dp"
            android:textColor="@color/text_color"
            android:textColorHint="#808080 " />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/roundbuttons"
            android:padding="14dp"
            android:text="@string/send_otp"
            app:cornerRadius="6dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/or_continue_with"
            android:textColor="@color/text_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonGoogle"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_icons8_google"
                android:elevation="5dp"
                android:fontFamily="@font/advent_pro_semibold"
                android:padding="14dp"
                android:text="@string/google"
                android:textColor="@color/text_color"
                app:backgroundTint="@color/buttonBackground"
                app:cornerRadius="6dp"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/buttonEmail"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic__msg"
                android:elevation="5dp"
                android:fontFamily="@font/advent_pro_semibold"
                android:padding="14dp"
                android:text="@string/email"
                android:textColor="@color/text_color"
                app:backgroundTint="@color/buttonBackground"
                app:cornerRadius="6dp"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

        <TextView
            android:id="@+id/alreadyHaveAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_create_an_account" />

    </LinearLayout>

</LinearLayout>